[tool.poetry]
name = "interplanetary-gradient"
version = "0.1.0"
description = ""
authors = ["Nelson Chen <crazysim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pywin32 = "^301"
pysmartthings = "^0.7.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
